<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/Wazoolylogo"
        android:layout_width="545dp"
        android:layout_height="224dp"
        android:layout_marginBottom="409dp"

        android:contentDescription="@string/Wazoolylogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.011"
        app:srcCompat="@drawable/wazoolylogopic" />

    <EditText
        android:id="@+id/Username"
        android:layout_width="338dp"
        android:layout_height="64dp"
        android:layout_marginBottom="41dp"
        android:ems="10"
        android:hint="Username"
        android:inputType="textPersonName"
        android:text="@string/Username"
        android:textAlignment="center"

        android:textColor="#868686"
        app:layout_constraintBottom_toTopOf="@+id/passwordEntry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Wazoolylogo"
        app:layout_constraintVertical_bias="0.727" />

    <EditText
        android:id="@+id/passwordEntry"
        android:layout_width="343dp"
        android:layout_height="68dp"
        android:layout_marginTop="160dp"


        android:autofillHints=""
        android:backgroundTint="#8F8D8D"
        android:cursorVisible="false"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:outlineAmbientShadowColor="@color/colorPrimaryDark"


        android:textAlignment="center"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Wazoolylogo" />

    <Button
        android:id="@+id/loginbutton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="187dp"
        android:layout_height="92dp"
        android:layout_marginLeft="156dp"
        android:layout_marginTop="34dp"
        android:layout_marginRight="167dp"
        android:layout_marginBottom="122dp"
        android:background="#00FFFFFF"
        android:fontFamily="casual"

        android:text="@string/LOGIN"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textColor="#5E4632"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEntry"
        app:layout_constraintVertical_bias="0.185" />
</androidx.constraintlayout.widget.ConstraintLayout>


